--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=https://stock-next-one.vercel.app/api/
+NEXT_PUBLIC_API_URL=https://stock-next-nu.vercel.app/api/
 MONGODB_URI=mongodb+srv://user1:5YEQ5ykSxob49A4r@webdev.r5necgu.mongodb.net/stock
